# gui_project

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/: main.py
src/gui/: helpers.py
src/universal/: helpers.py
